--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-appwrite": "^0.7.2",
+    "react-native-color-picker": "^0.6.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.13.1",
@@ -46,6 +47,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "react-native-wheel-color-picker": "^1.3.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
